force-app/main/default/objects/sf_Ref_Application_Language__c/fields/sf_Ref_Application__c.field-meta.xml
<CustomField>
    <fullName>sf_Ref_Application__c</fullName>
    <label>Reference Application</label>
    <referenceTo>sf_Ref_Application__c</referenceTo>
    <relationshipLabel>Reference Application Languages</relationshipLabel>
    <relationshipName>sf_Ref_Application_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>