force-app/main/default/objects/sf_Ref_Application_Language__c/fields/Translated_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Translated_Application_Number__c</fullName>
    <inlineHelpText>This represents &apos;Application Number&apos; in the translated language.</inlineHelpText>
    <label>Translated Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>