force-app/main/default/objects/sf_Ref_Application_Language__c/fields/Translated_Cancel_Text__c.field-meta.xml
<CustomField>
    <fullName>Translated_Cancel_Text__c</fullName>
    <inlineHelpText>Represents the &apos;Cancel&apos; Button translated.</inlineHelpText>
    <label>Translated Cancel Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>